2004-10-29  Jim Blandy  <jimb@redhat.com>

	* linux-target.c (x86_make_arch): Use allocate_empty_arch.

	* linux-target.c: #include <string.h>, <sys/types.h>, and
	<sys/wait.h> to get declarations for system functions used in this
	file.

	* gdbserv-thread-db.h (stop_lwp, handle_waitstatus, ps_pdread,
	ps_pdwrite): Add declarations for these functions to
	gdbserv-thread-db.h.

	* Makefile.am (AM_CFLAGS): Add '-Wall'.
	* Makefile.in: Update.

2004-10-26  Jim Blandy  <jimb@redhat.com>

	Add an architecture object to the Unix server.
	* arch.h: New header file.
	* server.h (struct arch): New forward struct declaration.
	(struct child_process): Add an 'arch' member to the process.
	* thread-db.c: #include arch.h.
	* linux-target.c: #include arch.h.
	(allocate_empty_arch): New function.
	(x86_make_arch): New function.
	(MAKE_ARCH): New #definition.
	(linux_attach): Initialize process's architecture.

	Provide arch-independent framework for breakpoints.
	* server.h (struct arch_bp_table): New forward struct declaration.
	(struct child_process): New member: 'breakpoint_table'.
	* linux-target.c (linux_attach): Initialize process's breakpoint
	table, if the architecture defines a breakpoint table constructor.
	* arch.h (struct arch): Add fields pointing to breakpoint functions.

	Provide a module implementing breakpoints for architectures that
	support a simple software breakpoint model ("patch these bytes
	into the instruction stream").
	* stock-breakpoints.h, stock-breakpoints.c: New files.
	* linux-target.c: If STOCK_BREAKPOINTS is #defined, then #include
	"stock-breakpoints.h".
	* Makefile.am (EXTRA_rda_SOURCES): Add stock-breakpoints.c.
	* Makefile.in: Updated.

	Define x86 breakpoint functions using the stock-breakpoints.c
	model.
	* configure.in: When configuring for an x86 target, include
	stock-breakpoints.o in the mix, and #define STOCK_BREAKPOINTS.
	* configure: Regenerated.
	* config.in (STOCK_BREAKPOINTS): Provide #definition template.